--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,9 +9,9 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (04/06/21)
+      Last updated (22/06/21)
     </h2>
-    <p class="govuk-body-l">Page widths have been increased to new wider width.</p>
+    <p class="govuk-body-l">Page widths have been increased to new wider width.<br><span style="color: red">Email confirmations removed & pending reinstated</span></p>
     <div style="display: flex; margin-top: 80px;">
       <div style="width: 800px;">
 
@@ -37,10 +37,12 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=judiciary&">My work - entry</a><br>Case reference search from header</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=judiciary&">Case details</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&">Request access</a><br>Specifc access - Flow request</br></p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Specifc access - Flow request</br></p>
-        <p><a target="_blank" href="/caseaccess/pages/email-p?usertype=judiciary&">Email confirmation</a><br>Specifc access request<br></p>
-    <!--    <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=judiciary&">View access request</a><br>Pending Specifc access - Flow request</p>
-        <p><a target="_blank" href="/caseaccess/pages/myaccess-pod?usertype=judiciary&">Delete request</a><br>Pending Specifc access - Flow request</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Specifc access - Flow request</br> <span style="color: red">*Reinstated</span></p>
+   <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=judiciary&">My access</a><br>Pending Specifc access - Flow request<br><span style="color: red">*Reinstated</span></p>
+  <!--       <p><a target="_blank" href="/caseaccess/pages/email-p?usertype=judiciary&">Email confirmation</a><br>Specifc access request<br></p>
+
+       <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=judiciary&">View access request</a><br>Pending Specifc access - Flow request </br></p>
+     <p><a target="_blank" href="/caseaccess/pages/myaccess-pod?usertype=judiciary&">Delete request</a><br>Pending Specifc access - Flow request</br></p>
 -->
         <!-- SECTION BREAK -->
 
@@ -52,7 +54,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Review specific access request</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Grant duration of case access
           </a><br>Specifc access - Flow approve</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Access approved</a><br>Specifc access - Flow approve</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
         <!-- SECTION BREAK -->
@@ -68,7 +70,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Case view - Grant duration of case access
           </a><br>Specifc access - Flow approve</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Case view - Access approved</a><br>Specifc access - Flow approve</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Case view - Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
@@ -76,8 +78,8 @@ GOV.UK Prototype Kit
 
         <h2 class="govuk-heading-m">(USER) Specifc access approved</h2>
         <h3 class="govuk-heading-s"> Scenario C - Part 2 - Granted (approved)</h3>
-        <p><a target="_blank" href="/caseaccess/pages/email-approved-s?usertype=judiciary&">Email confirmation</a><br>Specifc access request approved<br></p>
-        <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=judiciary&">My access</a><br>Specifc access - Flow request</p>
+      <!--  <p><a target="_blank" href="/caseaccess/pages/email-approved-s?usertype=judiciary&">Email confirmation</a><br>Specifc access request approved<br></p> -->
+        <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=judiciary&">My access</a><br>Specifc access - Flow request<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=judiciary&">Case view - Role / access</a><br>Specifc access - Flow request approved</p>
 
         <!-- SECTION BREAK -->
@@ -88,7 +90,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=judiciary&">Review specific access request</a><br>Specifc access - Flow rejected</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Reject specific access request
           </a><br>Specifc access - Flow rejected</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=judiciary&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=judiciary&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p> -->
 
         <!-- SECTION BREAK -->
@@ -101,20 +103,20 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>Specifc access - Flow reject</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=judiciary&">Case view - Reject specific access request
           </a><br>Specifc access - Flow reject</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=judiciary&">Case view - Access denied</a><br>Specifc access - Flow reject</p>
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=judiciary&">Case view - Access denied</a><br>Specifc access - Flow reject<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow rejected</p>
 
         <!-- SECTION BREAK -->
 
         <h2 class="govuk-heading-m">(USER) Specifc access rejected</h2>
         <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
-      <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=judiciary&">My access</a><br>Specifc access - Flow rejected</p>
-        <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected</p>
-       -->
+    <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=judiciary&">My access</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
+        <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=judiciary&">View details</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
 
+<!--
        <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=judiciary&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
 <p><a target="_blank" href="/caseaccess/pages/email-rejected-s?usertype=judiciary&">Email - rejected request - Other</a><br>Specifc access - Flow rejected</p>
-
+-->
         <!-- SECTION BREAK -->
 
         <h3 class="govuk-heading-s">Scenario E - Booking UI</h3>
@@ -149,12 +151,12 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=staff&">My work - entry</a><br>Case reference search from header</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=staff&">Case details</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=staff&">Request access</a><br>Specifc access - Flow request</br></p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=staff&">Confirmation</a><br>Specifc access - Flow request</br></p>
-          <p><a target="_blank" href="/caseaccess/pages/email-p?usertype=judiciary&">Email confirmation</a><br>Specifc access request<br></p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=staff&">Confirmation</a><br>Specifc access - Flow request</br> <span style="color: red">*Reinstated</span></p>
+        <!--      <p><a target="_blank" href="/caseaccess/pages/email-p?usertype=judiciary&">Email confirmation</a><br>Specifc access request<br></p>
+-->
 
-
-      <!--       <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=staff&">My access</a><br>Pending Specifc access - Flow request</p>
-       <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=staff&">View access request</a><br>Pending Specifc access - Flow request</p>
+         <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=staff&">My access</a><br>Pending Specifc access - Flow request<br><span style="color: red">*Reinstated</span></p>
+  <!--     <p><a target="_blank" href="/caseaccess/pages/myaccess-povd?usertype=staff&">View access request</a><br>Pending Specifc access - Flow request</p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-pod?usertype=staff&">Delete request</a><br>Pending Specifc access - Flow request</p>
 -->
           <!-- SECTION BREAK -->
@@ -168,7 +170,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&"">Review specific access request</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Grant duration of case access
             </a><br>Specifc access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Access approved</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
 
           <!-- SECTION BREAK -->
 
@@ -181,7 +183,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Case view - Grant duration of case access
             </a><br>Specifc access - Flow approve</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Case view - Access approved</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Case view - Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
@@ -189,8 +191,8 @@ GOV.UK Prototype Kit
 
           <h2 class="govuk-heading-m">(USER) Specifc access approved</h2>
           <h3 class="govuk-heading-s"> Scenario C - Part 2 - Granted (approved)</h3>
-            <p><a target="_blank" href="/caseaccess/pages/email-approved-st?usertype=judiciary&">Email confirmation</a><br>Specifc access request approved<br></p>
-          <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=staff&">My access</a><br>Specifc access - Flow request</p>
+        <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved-st?usertype=judiciary&">Email confirmation</a><br>Specifc access request approved<br></p> -->
+          <p><a target="_blank" href="/caseaccess/pages/myaccess-tc?usertype=staff&">My access</a><br>Specifc access - Flow request<br><span style="color: red">*Reinstated</span></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ara?usertype=staff&">Case view - Role / access</a><br>Specifc access - Flow request approved</p>
 
           <!-- SECTION BREAK -->
@@ -201,7 +203,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Reject specific access request
             </a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected <br><span style="color: red">*Reinstated</span></p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p> -->
 
           <!-- SECTION BREAK -->
@@ -214,17 +216,17 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>Specifc access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=staff&">Case view - Reject specific access request
             </a><br>Specifc access - Flow reject</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=staff&">Case view - Access denied</a><br>Specifc access - Flow reject</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=staff&">Case view - Access denied</a><br>Specifc access - Flow reject<br><span style="color: red">*Reinstated</span></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow rejected</p>
 
           <!-- SECTION BREAK -->
 
           <h2 class="govuk-heading-m">(USER) Specifc access rejected</h2>
           <h3 class="govuk-heading-s"> Scenario D (a + b) - Part 2 - Granted (Rejected)</h3>
-      <!--    <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected</p> -->
-          <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=staff&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/email-rejected-s?usertype=staff&">Email - rejected request - Other</a><br>Specifc access - Flow rejected</p>
+        <p><a target="_blank" href="/caseaccess/pages/myaccess-tcr?usertype=staff&">My access</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
+          <p><a target="_blank" href="/caseaccess/pages/ma-tcrvd?usertype=staff&">View details</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
+  <!--        <p><a target="_blank" href="/caseaccess/pages/email-rejected?usertype=staff&">Email - rejected request - Automatic</a><br>Specifc access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/email-rejected-s?usertype=staff&">Email - rejected request - Other</a><br>Specifc access - Flow rejected</p> -->
     <!--      <p><a target="_blank" href="#">Re-request access</a><br>Specifc access - Flow rejected</p> -->
         <!--  <p><a target="_blank" href="/caseaccess/pages/myaccess-tcrd?usertype=staff&">Delete request</a><br>Specifc access - Flow rejected</p>
 -->
