--- a/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trac-case.html
@@ -14,15 +14,14 @@ Case details
                 titleText: "Access approved"
               }) }}
               <h2 class="govuk-heading-m">What happens next</h2>
-
+<!--
               <p class="govuk-body">
                 The person making the request will be sent an email notifying them that they now have access to the case.
-              </p>
-
-
-        <!--      <p class="govuk-body">
-                You can find the details in the ‘Roles and access’ tab.
               </p> -->
+        
+          <p class="govuk-body">
+                You can find the details in the ‘Roles and access’ tab.
+              </p>
               <div class="govuk-button-group">
               {{ govukButton({
                 text: "Return to My tasks",
