--- a/app/views/caseaccess/pages/myaccess-p.html
+++ b/app/views/caseaccess/pages/myaccess-p.html
@@ -50,7 +50,7 @@ My work
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="ascending"><button type="button" data-index="0">Case name</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Jurisdiction</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Case category</button></th>
-          <!--      <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date submitted</button></th> -->
+                <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Date submitted</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Access</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">Start</button></th>
                 <th scope="col" class="govuk-table__header govuk-body govuk-!-font-size-19" style="width: auto;" aria-sort="none"><button type="button" data-index="1">End</button></th>
@@ -58,12 +58,12 @@ My work
               </tr>
             </thead>
             <tbody class="govuk-table__body">
-
+<!--
               <tr>
                   <td colspan="7">Cases you have been granted access to are displayed here.</td>
               </tr>
-
-      <!--        <tr class="govuk-table__row">
+-->
+            <tr class="govuk-table__row">
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Amelia Chu</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Immigration and Asylum</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Protection</td>
@@ -72,7 +72,7 @@ My work
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19">Pending</td>
               <td class="govuk-table__cell govuk-body govuk-!-font-size-19"></td>
               <td class="govuk-table__cell"><!-- &nbsp;&nbsp;&nbsp;<a href="myaccess-po" class="right_m">Manage</a><span class="govuk-accordion-wa__icon"></span></td>
-              </tr> -->
+              </tr>
 
               </tbody>
           </table>
