--- a/app/views/caseaccess/pages/PA-00321-2018-request.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request.html
@@ -63,10 +63,7 @@ Case details
         },
         {
           value: "email",
-          text: "To determine if the case needs to be consolidated ",
-      conditional: {
-        html: emailHtml
-      }
+          text: "To determine if the case needs to be consolidated "
         },
         {
           value: "email",
