--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -24,7 +24,7 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=judiciary&">My work - entry</a><br>Case reference search from header</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=judiciary&">Case details</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=judiciary&">Request access</a><br>Challanged access - Flow request</br></p>
-
+        <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error?usertype=judiciary&">Request access error</a><br>Challanged access - Flow request error</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=judiciary&">Confirmation</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=judiciary&">Case details</a><br>Challanged access - Flow request</br></p>
         <p><a target="_blank" href="/caseaccess/pages/myaccess-r?usertype=judiciary&">My access</a><br>Challanged access - shown in situe</br></p>
@@ -37,6 +37,8 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=judiciary&">My work - entry</a><br>Case reference search from header</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=judiciary&">Case details</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=judiciary&">Request access</a><br>Specifc access - Flow request</br></p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request-error?usertype=judiciary&">Request access error</a><br>Specifc access - Flow request error</br></p>
+
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=judiciary&">Confirmation</a><br>Specifc access - Flow request</br> <span style="color: red">*Reinstated</span></p>
    <p><a target="_blank" href="/caseaccess/pages/myaccess-p?usertype=judiciary&">My access</a><br>Pending Specifc access - Flow request<br><span style="color: red">*Reinstated</span></p>
   <!--       <p><a target="_blank" href="/caseaccess/pages/email-p?usertype=judiciary&">Email confirmation</a><br>Specifc access request<br></p>
@@ -139,6 +141,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/mywork-c?usertype=staff&">My work - entry</a><br>Case reference search from header</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request?usertype=staff&">Request access</a><br>Challanged access - Flow request</br></p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-request-error?usertype=staff&">Request access error</a><br>Challanged access - Flow request error</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-confirmation?usertype=staff&">Confirmation</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00321-2018-a?usertype=staff&">Case details</a><br>Challanged access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/myaccess-r?usertype=staff&">My access</a><br>Challanged access - shown in situe</br></p>
@@ -151,6 +154,7 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/mywork?usertype=staff&">My work - entry</a><br>Case reference search from header</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017?usertype=staff&">Case details</a><br>Specifc access - Flow request</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request?usertype=staff&">Request access</a><br>Specifc access - Flow request</br></p>
+            <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-request-error?usertype=staff&">Request access error</a><br>Specifc access - Flow request error</br></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-confirmation?usertype=staff&">Confirmation</a><br>Specifc access - Flow request</br> <span style="color: red">*Reinstated</span></p>
         <!--      <p><a target="_blank" href="/caseaccess/pages/email-p?usertype=judiciary&">Email confirmation</a><br>Specifc access request<br></p>
 -->
