--- a/app/views/caseaccess/pages/PA-00321-2018-request-error.html
+++ b/app/views/caseaccess/pages/PA-00321-2018-request-error.html
@@ -31,6 +31,7 @@ Case details
 </div>
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
+
         {% set textHtml %}
         {{ govukTextarea({
           name: "more-detail",
@@ -74,10 +75,7 @@ Case details
             },
             {
               value: "email",
-              text: "To determine if the case needs to be consolidated ",
-          conditional: {
-            html: emailHtml
-          }
+              text: "To determine if the case needs to be consolidated "
             },
             {
               value: "email",
@@ -118,5 +116,3 @@ Case details
             </select>
         </form>
         {% endblock %}
-{% block scripts %}
-{% endblock %}
