updates to duel running

--- a/app/views/searchcases/transition/available-tasks-sscs-testing.html
+++ b/app/views/searchcases/transition/available-tasks-sscs-testing.html
@@ -7,11 +7,14 @@
 My work
 {% endblock %}
 {% block content %}
-    <div class="hmcts-page-heading">
+    <div class="hmcts-page-heading" style="margin-bottom: 20px;">
           <div class="hmcts-page-heading__title">
                <h1 class="govuk-heading-xl">My work</h1>
           </div>
     </div>
+
+<p>For: Divorce</p>
+
     <p>See your tasks and view tasks available for you to pick up.</p>
     {{ govukButton({
   text: "Filter my work",
