--- a/app/views/caseaccess/index.html
+++ b/app/views/caseaccess/index.html
@@ -9,7 +9,7 @@ GOV.UK Prototype Kit
       Case access prototype
     </h1>
     <h2 class="govuk-heading-l">
-      Last updated (22/06/21)
+      Last updated (23/06/21)
     </h2>
     <p class="govuk-body-l">Page widths have been increased to new wider width.<br><span style="color: red">Email confirmations removed & pending reinstated</span></p>
     <div style="display: flex; margin-top: 80px;">
@@ -54,8 +54,11 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Active tasks</a><br>Assign to me - Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Assigned</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Review specific access request</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=judiciary&">Review specific access request error</a><br>Specifc access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Grant duration of case access
           </a><br>Specifc access - Flow approve</p>
+<p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=judiciary&">Grant duration of case access error</a><br>Specifc access - error</p>
+
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
 
@@ -70,8 +73,10 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=judiciary&">Case view - assigned yourself a task</a><br>Specifc access - Flow approve</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=judiciary&">Case view - Review specific access request error</a><br>Specifc access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=judiciary&">Case view - Grant duration of case access
           </a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=judiciary&">Grant duration of case access error</a><br>Specifc access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=judiciary&">Case view - Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
@@ -90,8 +95,10 @@ GOV.UK Prototype Kit
         <h3 class="govuk-heading-s">Scenario D (a) - Reject specific access to case </h3>
         <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=judiciary&">Available tasks</a><br>Specifc access - Flow rejected</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=judiciary&">Review specific access request</a><br>Specifc access - Flow rejected</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Reject specific access request
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=judiciary&">Reject specific access request - request more information
           </a><br>Specifc access - Flow rejected</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-error?usertype=judiciary&">Reject specific access request - request more information error
+            </a><br>Specifc access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=judiciary&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected<br><span style="color: red">*Reinstated</span></p>
         <!--    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p> -->
 
@@ -103,8 +110,10 @@ GOV.UK Prototype Kit
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=judiciary&">Case view - Role / access</a><br>Specifc access - Flow reject</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow reject</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=judiciary&">Case view - Review specific access request</a><br>Specifc access - Flow reject</p>
-        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=judiciary&">Case view - Reject specific access request
+        <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=judiciary&">Case view - Reject specific access request - request more information
           </a><br>Specifc access - Flow reject</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case-error?usertype=judiciary&">Reject specific access request - request more information error
+            </a><br>Specifc access - error</p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=judiciary&">Case view - Access denied</a><br>Specifc access - Flow reject<br><span style="color: red">*Reinstated</span></p>
         <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=judiciary&">Case view - Tasks</a><br>Specifc access - Flow rejected</p>
 
@@ -172,8 +181,10 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Active tasks</a><br>Assign to me - Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Assigned</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&"">Review specific access request</a><br>Specifc access - Flow approve</p>
+              <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=staff&">Review specific access request error</a><br>Specifc access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Grant duration of case access
             </a><br>Specifc access - Flow approve</p>
+            <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=staff&">Grant duration of case access error</a><br>Specifc access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
 
           <!-- SECTION BREAK -->
@@ -185,8 +196,10 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ta?usertype=staff&">Case view - assigned yourself a task</a><br>Specifc access - Flow approve</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>Specifc access - Flow approve</p>
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case-error?usertype=staff&">Case view - Review specific access request error</a><br>Specifc access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case?usertype=staff&">Case view - Grant duration of case access
             </a><br>Specifc access - Flow approve</p>
+            <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tra-case-error?usertype=staff&">Grant duration of case access error</a><br>Specifc access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trac-case?usertype=staff&">Case view - Access approved</a><br>Specifc access - Flow approve<br><span style="color: red">*Reinstated</span></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow approve</p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-approved">Email notifcation - Task Approved</a></p> -->
@@ -205,8 +218,10 @@ GOV.UK Prototype Kit
           <h3 class="govuk-heading-s">Scenario D (a) - Reject specific access to case </h3>
           <p><a target="_blank" href="/caseaccess/pages/available-tasks-s2?usertype=staff&">Available tasks</a><br>Specifc access - Flow rejected</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr?usertype=staff&">Review specific access request</a><br>Specifc access - Flow rejected</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Reject specific access request
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr?usertype=staff&">Reject specific access request - request more information
             </a><br>Specifc access - Flow rejected</p>
+            <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-error?usertype=staff&">Reject specific access request - request more information error
+              </a><br>Specifc access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc?usertype=staff&">Confirmation - Task Rejected</a><br>Specifc access - Flow rejected <br><span style="color: red">*Reinstated</span></p>
           <!--    <p><a target="_blank" href="/caseaccess/pages/email-rejected">Email notifcation - Task Rejected</a></p> -->
 
@@ -218,8 +233,10 @@ GOV.UK Prototype Kit
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-ar?usertype=staff&">Case view - Role / access</a><br>Specifc access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-t?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow reject</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tr-case?usertype=staff&">Case view - Review specific access request</a><br>Specifc access - Flow reject</p>
-          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=staff&">Case view - Reject specific access request
+          <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case?usertype=staff&">Case view - Reject specific access request - request more information
             </a><br>Specifc access - Flow reject</p>
+            <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trr-case-error?usertype=staff&">Reject specific access request - request more information error
+              </a><br>Specifc access - error</p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-trrc-case?usertype=staff&">Case view - Access denied</a><br>Specifc access - Flow reject<br><span style="color: red">*Reinstated</span></p>
           <p><a target="_blank" href="/caseaccess/pages/PA-00467-2017-tca?usertype=staff&">Case view - Tasks</a><br>Specifc access - Flow rejected</p>
 
