--- a/app/views/caseaccess/pages/PA-00467-2017-tra-case-error.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-tra-case-error.html
@@ -11,9 +11,21 @@ Case details
 {% endblock %}
 
 {% block content %}
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#passport-issued-error">Select a duration</a>
+      </li>
+    </ul>
+  </div>
+</div>
 <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
-          <span class="govuk-caption-l">Approve specific access request</span>
+          <span class="govuk-caption-l govuk-form-group--error">Approve specific access request</span>
     {% set setDuration %}
     {{ govukDateInput({
       id: "passport-issued",
@@ -95,7 +107,10 @@ Case details
             html: setDuration
           }
         }
-      ]
+      ],
+      errorMessage: {
+text: "Select a duration"
+}
     }) }}
     <div class="govuk-button-group">
     {{ govukButton({
