--- a/app/views/caseaccess/pages/PA-00467-2017-trr-error.html
+++ b/app/views/caseaccess/pages/PA-00467-2017-trr-error.html
@@ -16,10 +16,22 @@ Case details
   id: "more-detail"
 }) }}
 {% endset -%}
+<div class="govuk-error-summary" aria-labelledby="error-summary-title" role="alert" tabindex="-1" data-module="govuk-error-summary">
+  <h2 class="govuk-error-summary__title" id="error-summary-title">
+    There is a problem
+  </h2>
+  <div class="govuk-error-summary__body">
+    <ul class="govuk-list govuk-error-summary__list">
+      <li>
+        <a href="#passport-issued-error">Enter details</a>
+      </li>
+    </ul>
+  </div>
+</div>
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <div class="govuk-form-group">
+    <div class="govuk-form-group govuk-form-group--error">
       <h1 class="govuk-label-wrapper">  <span class="govuk-caption-l">Reject specific access request</span><label class="govuk-label govuk-label--l" for="more-detail">
             Request more information
         </label>
@@ -27,6 +39,9 @@ Case details
       <div id="more-detail-hint" class="govuk-hint">
         This information will be sent to the person requesting access to the case.
       </div>
+      <span id="nationality-error" class="govuk-error-message">
+ <span class="govuk-visually-hidden">Error:</span> Enter details
+</span>
       <textarea class="govuk-textarea" id="more-detail" name="more-detail" rows="5" aria-describedby="more-detail-hint"></textarea>
     </div>
     <!--
